src/include/flutter_ffi_uvc.h

// One camera per session. Sessions share nothing except the log level.
// Every call may arrive on any thread, including several threads for one
// session, and backends serialize internally. Listeners may run on native
// threads. A NULL session behaves like a closed one. Int-returning calls return
// UVC_ERROR_INVALID_PARAM (-2), uvc_ctrl_get returns INT32_MIN, JSON writers
// return 0, and uvc_last_error returns "".
typedef struct uvc_session uvc_session_t;
// Allocates an idle session. Returns NULL on allocation failure.
FFI_PLUGIN_EXPORT uvc_session_t *uvc_session_create(void);
// uvc_request_destroy without a report. Queues the teardown and returns at
// once, so it is safe to call from a garbage collector or any thread that
// must not block. No listener fires afterwards.
FFI_PLUGIN_EXPORT void uvc_session_destroy(uvc_session_t *session);
// For callers that hold a session pointer they do not own. uvc_session_acquire
// returns 1 and pins the session when the pointer is a live session, and 0
// for any other pointer. Pair every successful acquire with a release.
FFI_PLUGIN_EXPORT int uvc_session_acquire(uvc_session_t *session);
FFI_PLUGIN_EXPORT void uvc_session_release(uvc_session_t *session);
// Registry id of a session. Unique for the life of the process and never
// reused, so a holder can name a session that may have been destroyed since.
// Platform plugin layers key their state by this id, not by the pointer.
FFI_PLUGIN_EXPORT uint64_t uvc_session_id(uvc_session_t *session);
// Pins the session with that id, as uvc_session_acquire does. Returns NULL
// when no live session has it. Release with uvc_session_release.
FFI_PLUGIN_EXPORT uvc_session_t *uvc_session_acquire_id(uint64_t id);
// Synchronous lifecycle. These block the calling thread and bypass the
// request queue below, which is built on them. The Dart layer uses the
// queue. Opens a device on the session. fd is a USB device node descriptor
// on Android and Linux and the enumeration device id on Windows. A device
// already open on this session is closed first.
FFI_PLUGIN_EXPORT int uvc_open_fd(uvc_session_t *session, int fd);
FFI_PLUGIN_EXPORT int uvc_start_preview(
    uvc_session_t *session,
    int frame_format,
    int width,
    int height,
    int fps);
FFI_PLUGIN_EXPORT void uvc_stop_preview(uvc_session_t *session);
FFI_PLUGIN_EXPORT void uvc_close_device(uvc_session_t *session);
FFI_PLUGIN_EXPORT int uvc_is_previewing(uvc_session_t *session);
FFI_PLUGIN_EXPORT int uvc_frame_width(uvc_session_t *session);
FFI_PLUGIN_EXPORT int uvc_frame_height(uvc_session_t *session);
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length);
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba_with_metadata(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba_transformed(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length,
    int rotation,
    int flip_h,
    int flip_v,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
FFI_PLUGIN_EXPORT int64_t uvc_latest_frame_sequence(uvc_session_t *session);
// Listeners run on native threads and receive user_data unchanged. A NULL
// listener clears the slot and returns only after a call in progress has
// finished, so user_data may be freed afterwards. A listener must not call
// back into this ABI. Both slots survive uvc_close_device.
typedef void (*uvc_frame_listener_t)(void *user_data, int64_t sequence);
FFI_PLUGIN_EXPORT void uvc_set_frame_listener(
    uvc_session_t *session,
    uvc_frame_listener_t listener,
    void *user_data);
// Queues the teardown. Requests still queued complete with
// UVC_ERROR_NO_DEVICE, then this one completes once the device is closed,
// and the session is freed after that. Every later request is refused.
// The session pointer must not be used once this has completed.
FFI_PLUGIN_EXPORT int64_t uvc_request_destroy(uvc_session_t *session);