lib/src/flutter_ffi_uvc_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/include/flutter_ffi_uvc.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterFfiUvcBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterFfiUvcBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterFfiUvcBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Allocates an idle session. Returns NULL on allocation failure.
  ffi.Pointer<uvc_session_t> uvc_session_create() {
    return _uvc_session_create();
  }

  late final _uvc_session_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<uvc_session_t> Function()>>(
        'uvc_session_create',
      );
  late final _uvc_session_create = _uvc_session_createPtr
      .asFunction<ffi.Pointer<uvc_session_t> Function()>();

  /// uvc_request_destroy without a report. Queues the teardown and returns at
  /// once, so it is safe to call from a garbage collector or any thread that
  /// must not block. No listener fires afterwards.
  void uvc_session_destroy(ffi.Pointer<uvc_session_t> session) {
    return _uvc_session_destroy(session);
  }

  late final _uvc_session_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<uvc_session_t>)>
      >('uvc_session_destroy');
  late final _uvc_session_destroy = _uvc_session_destroyPtr
      .asFunction<void Function(ffi.Pointer<uvc_session_t>)>();

  /// For callers that hold a session pointer they do not own. uvc_session_acquire
  /// returns 1 and pins the session when the pointer is a live session, and 0
  /// for any other pointer. Pair every successful acquire with a release.
  int uvc_session_acquire(ffi.Pointer<uvc_session_t> session) {
    return _uvc_session_acquire(session);
  }

  late final _uvc_session_acquirePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<uvc_session_t>)>>(
        'uvc_session_acquire',
      );
  late final _uvc_session_acquire = _uvc_session_acquirePtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  void uvc_session_release(ffi.Pointer<uvc_session_t> session) {
    return _uvc_session_release(session);
  }

  late final _uvc_session_releasePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<uvc_session_t>)>
      >('uvc_session_release');
  late final _uvc_session_release = _uvc_session_releasePtr
      .asFunction<void Function(ffi.Pointer<uvc_session_t>)>();

  /// Registry id of a session. Unique for the life of the process and never
  /// reused, so a holder can name a session that may have been destroyed since.
  /// Platform plugin layers key their state by this id, not by the pointer.
  int uvc_session_id(ffi.Pointer<uvc_session_t> session) {
    return _uvc_session_id(session);
  }

  late final _uvc_session_idPtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<uvc_session_t>)>
      >('uvc_session_id');
  late final _uvc_session_id = _uvc_session_idPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  /// Pins the session with that id, as uvc_session_acquire does. Returns NULL
  /// when no live session has it. Release with uvc_session_release.
  ffi.Pointer<uvc_session_t> uvc_session_acquire_id(int id) {
    return _uvc_session_acquire_id(id);
  }

  late final _uvc_session_acquire_idPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<uvc_session_t> Function(ffi.Uint64)>
      >('uvc_session_acquire_id');
  late final _uvc_session_acquire_id = _uvc_session_acquire_idPtr
      .asFunction<ffi.Pointer<uvc_session_t> Function(int)>();

  /// Synchronous lifecycle. These block the calling thread and bypass the
  /// request queue below, which is built on them. The Dart layer uses the
  /// queue. Opens a device on the session. fd is a USB device node descriptor
  /// on Android and Linux and the enumeration device id on Windows. A device
  /// already open on this session is closed first.
  int uvc_open_fd(ffi.Pointer<uvc_session_t> session, int fd) {
    return _uvc_open_fd(session, fd);
  }

  late final _uvc_open_fdPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<uvc_session_t>, ffi.Int)
        >
      >('uvc_open_fd');
  late final _uvc_open_fd = _uvc_open_fdPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int)>();

  int uvc_start_preview(
    ffi.Pointer<uvc_session_t> session,
    int frame_format,
    int width,
    int height,
    int fps,
  ) {
    return _uvc_start_preview(session, frame_format, width, height, fps);
  }

  late final _uvc_start_previewPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('uvc_start_preview');
  late final _uvc_start_preview = _uvc_start_previewPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, int, int, int, int)
      >();

  void uvc_stop_preview(ffi.Pointer<uvc_session_t> session) {
    return _uvc_stop_preview(session);
  }

  late final _uvc_stop_previewPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<uvc_session_t>)>
      >('uvc_stop_preview');
  late final _uvc_stop_preview = _uvc_stop_previewPtr
      .asFunction<void Function(ffi.Pointer<uvc_session_t>)>();

  void uvc_close_device(ffi.Pointer<uvc_session_t> session) {
    return _uvc_close_device(session);
  }

  late final _uvc_close_devicePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<uvc_session_t>)>
      >('uvc_close_device');
  late final _uvc_close_device = _uvc_close_devicePtr
      .asFunction<void Function(ffi.Pointer<uvc_session_t>)>();

  int uvc_is_previewing(ffi.Pointer<uvc_session_t> session) {
    return _uvc_is_previewing(session);
  }

  late final _uvc_is_previewingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<uvc_session_t>)>>(
        'uvc_is_previewing',
      );
  late final _uvc_is_previewing = _uvc_is_previewingPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  int uvc_frame_width(ffi.Pointer<uvc_session_t> session) {
    return _uvc_frame_width(session);
  }

  late final _uvc_frame_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<uvc_session_t>)>>(
        'uvc_frame_width',
      );
  late final _uvc_frame_width = _uvc_frame_widthPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  int uvc_frame_height(ffi.Pointer<uvc_session_t> session) {
    return _uvc_frame_height(session);
  }

  late final _uvc_frame_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<uvc_session_t>)>>(
        'uvc_frame_height',
      );
  late final _uvc_frame_height = _uvc_frame_heightPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  int uvc_copy_latest_frame_rgba(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_copy_latest_frame_rgba(session, buffer, buffer_length);
  }

  late final _uvc_copy_latest_frame_rgbaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_copy_latest_frame_rgba');
  late final _uvc_copy_latest_frame_rgba = _uvc_copy_latest_frame_rgbaPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_copy_latest_frame_rgba_with_metadata(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int64> out_sequence,
  ) {
    return _uvc_copy_latest_frame_rgba_with_metadata(
      session,
      buffer,
      buffer_length,
      out_width,
      out_height,
      out_sequence,
    );
  }

  late final _uvc_copy_latest_frame_rgba_with_metadataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('uvc_copy_latest_frame_rgba_with_metadata');
  late final _uvc_copy_latest_frame_rgba_with_metadata =
      _uvc_copy_latest_frame_rgba_with_metadataPtr
          .asFunction<
            int Function(
              ffi.Pointer<uvc_session_t>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>,
            )
          >();

  int uvc_copy_latest_frame_rgba_transformed(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
    int rotation,
    int flip_h,
    int flip_v,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int64> out_sequence,
  ) {
    return _uvc_copy_latest_frame_rgba_transformed(
      session,
      buffer,
      buffer_length,
      rotation,
      flip_h,
      flip_v,
      out_width,
      out_height,
      out_sequence,
    );
  }

  late final _uvc_copy_latest_frame_rgba_transformedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('uvc_copy_latest_frame_rgba_transformed');
  late final _uvc_copy_latest_frame_rgba_transformed =
      _uvc_copy_latest_frame_rgba_transformedPtr
          .asFunction<
            int Function(
              ffi.Pointer<uvc_session_t>,
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>,
            )
          >();

  int uvc_latest_frame_sequence(ffi.Pointer<uvc_session_t> session) {
    return _uvc_latest_frame_sequence(session);
  }

  late final _uvc_latest_frame_sequencePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<uvc_session_t>)>
      >('uvc_latest_frame_sequence');
  late final _uvc_latest_frame_sequence = _uvc_latest_frame_sequencePtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  void uvc_set_frame_listener(
    ffi.Pointer<uvc_session_t> session,
    uvc_frame_listener_t listener,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _uvc_set_frame_listener(session, listener, user_data);
  }

  late final _uvc_set_frame_listenerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<uvc_session_t>,
            uvc_frame_listener_t,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('uvc_set_frame_listener');
  late final _uvc_set_frame_listener = _uvc_set_frame_listenerPtr
      .asFunction<
        void Function(
          ffi.Pointer<uvc_session_t>,
          uvc_frame_listener_t,
          ffi.Pointer<ffi.Void>,
        )
      >();
